--- a/website/app/assets/stylesheets/home.scss
+++ b/website/app/assets/stylesheets/home.scss
@@ -1,4 +1,73 @@
 /*// Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/*/
+body{
+	background-color: #89bdd3;
+}
+
+h1{
+	font-family: "Lato", sans-serif;
+	color:white;
+	font-size: 950%;
+	margin-left: 32.75%;
+	margin-top: 1em;
+}
+
+.auth{
+	width: 33%;
+	margin-left: 33%;
+	margin-top: 1em;
+	text-align: center;
+	padding: 2em;
+}
+
+#signin{
+	font-family: "Lato", sans-serif;
+	border: 3px solid white;
+	cursor: pointer;
+	padding: 0.25em;
+	color: white;
+}
+
+#signin:hover{
+	background-color: white;
+	color: #89bdd3;
+}
+
+.signin_box{
+	margin-top: 0.5em;
+	font-family: "Lato", sans-serif;
+	background-color: white;
+	padding: 1em;
+	font-size: 120%;
+	/*color: white;*/
+}
+
+
+#signup{
+	font-family: "Lato", sans-serif;
+	border: 3px solid white;
+	cursor: pointer;
+	padding: 0.25em;
+	color: white;
+}
+
+#signup:hover{
+	background-color: white;
+	color: #89bdd3;
+}
+
+.signup_box{
+	margin-top: 0.5em;
+	font-family: "Lato", sans-serif;
+	background-color: white;
+	padding: 1em;
+	font-size: 120%;
+	/*color: white;*/
+}
+
+
+
+
+
 
