--- a/src/index.ejs
+++ b/src/index.ejs
@@ -18,7 +18,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8"/>
-  <title>React Hack</title>
+  <title>Auxcare</title>
 </head>
 <body>
 <div id="app"></div>
