--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,31 +1,98 @@
 /* Variables */
-$vin-blue: #5bb7db;
-$vin-green: #60b044;
-$vin-red: #ff0000;
+$charcoal: #364958;
+$blue: #5FB3DD;
+$dark-blue: #427E9C;
+$light-blue: #8CCAE8;
 
 /* Styles */
 body {
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  line-height: 1.4em;
-  color: #4d4d4d;
-  min-width: 230px;
-  max-width: 550px;
-  margin: 0 auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-  font-weight: 300;
+	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	line-height: 1.4em;
+	min-width: 230px;
+	max-width: 550px;
+	margin: 0 auto;
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	font-smoothing: antialiased;
+	font-weight: 300;
+	background: $blue;
 }
 
-td {
-	padding: 12px;
+.parent {
+	h1 {
+		font-size: 5em;
+		color: white;
+	}
+
+	h2 {
+		color: $charcoal;
+	}
+
+	h3 {
+		font-size: 2em;
+	}
+
+	h4 {
+		color: $light-blue;
+		text-align: center;
+		font-size: 1.5em;
+		line-height: 0.75em;
+	}
+
+	p {
+		font-size: 2em;
+		text-align: center;
+		line-height: 1em;
+	}
+
+	li {
+		font-size: 2em;
+		text-align: center;
+		line-height: 1.25em;
+	}
+
+	img {
+		height: 95%;
+		width: 50%;
+		margin-top: 2em;
+		position: absolute;
+		left: 3em;
+	}
 }
 
-h2 {
-	color: $vin-blue;
+
+.login {
+	width: 30%;
+	height: 20em;
+	color: white;
+	text-align: center;
+	background-color: $dark-blue;
+	position: absolute;
+	right: 3em;
+	top: 3em;
 }
 
-.savings { color: $vin-green; }
-.loss { color: $vin-red; }
-input.small { width: 46px; }
-td.fuel-savings-label { width: 175px; }
+.getstarted {
+	width: 30%;
+	height: 28em;
+	color: white;
+	text-align: center;
+	background-color: $dark-blue;
+	position: absolute;
+	right: 3em;
+	top: 25em;
+}
+
+.nav {
+	font-size: 120%;
+	font-weight: bold;
+	position: absolute;
+	top: 1em;
+	right: 2em;  
+}
+
+.tab {
+	padding: 1em;
+}
+
+
