--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -1,40 +1,80 @@
 /* Variables */
-$charcoal: #364958;
-$blue: #5FB3DD;
-$dark-blue: #427E9C;
-$light-blue: #8CCAE8;
+$charcoal: #354052;
 
-.logo {
-	font-size: 3em;
-	height: 5em;
-	color: white;
-	background: $light-blue;
-}
+$light-grey: #C9D0DD;
+$medium-grey: #A0ACBF;
+$darkish-grey: #2B3444;
+$dark-grey: #65748D;
 
-/* Styles */
+
 .menu {
 	width: 20%;
+	background: $charcoal;
+	position: absolute;
+	left: 0;
+	top: 5.2em;
+	bottom: 0;
+
+	h1 {
+		margin-top: 1em;
+		color: white;
+		text-align: center;
+	}
+
+	h3 {
+		margin-left: 5%;
+		margin-top: 2em;
+		color: $dark-grey;
+	}
+}
+
+.logo {
+	width: 20%;
+	height: 5em;
+	background: $charcoal;
+	position: absolute;
+	left: 0;
+	top: 0;
+	h1 {
+		font-size: 3em;
+		color: white;
+		text-align: center;
+	}
+}
+
+.divider {
+	height: 0.2em;
+	width: 20%;
+	background: $darkish-grey;
 	position: absolute;
 	left: 0;
 	top: 5em;
-	bottom: 0;
-	background: $dark-blue;
 }
 
 .topmenu {
-	width: 80%;
-	height: 5em;
+	height: 5.5em;
+	background: white;
 	position: absolute;
 	top: 0;
 	right: 0;
-	background: $charcoal;
+	left: 20%;
+	h1 {
+		float: left;
+		color: white;
+		font-size: 3em;
+		margin-left: 4%;
+	}
 }
 
 .main {
 	width: 80%;
+	background: white;
 	position: absolute;
-	top: 5em;
+	top: 5.5em;
 	right: 0;
 	bottom: 0;
-	background: white;
+
+	h1 {
+		margin-left: 5%;
+	}
 }
